--- a/7DaysOfCode/styles.css
+++ b/7DaysOfCode/styles.css
@@ -3,19 +3,22 @@ html { font-family: 'Inter', sans-serif; }
 @supports (font-variation-settings: normal) {
   html { font-family: 'Inter var', sans-serif; }
 }
-nav{
+
+header{
     display: flex;
     list-style: none;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-around;
-
-    
     background: #FFFFFF;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    height: 8vh;
+}
+.logo{
+    width: 50px;
 }
 .logolist{
     /* Posição */
@@ -24,6 +27,7 @@ nav{
     gap: 10px;
     margin-left: 100px;
     align-items: center;
+    
     
     /* estilo */
 }
@@ -44,7 +48,7 @@ nav{
     display: flex;
     list-style: none;
     gap: 10px;
-    margin-right: 150px;
+    margin-right: 15px;
     align-items: center;
     /* estilo */
 }
@@ -62,6 +66,8 @@ nav{
 .navigation a {
     color: #667085;
     text-decoration: none;
+    letter-spacing: 1px;
+    margin-left: 32px;
 }
 
 
@@ -270,4 +276,61 @@ nav{
     font-size: 16px;
     font-weight: 400;
 
+}
+@media only screen and (max-width: 999px){
+    body{
+        overflow-x: hidden;
+    }
+    .vagas-emprego{
+        margin: 0px;
+    }
+    .tipo-de-vaga{
+        text-align: center;
+    }
+    .descricao_vaga{
+        margin: 0px 0px;
+        padding: 10px;
+    }
+    .nome-vaga{
+        text-align: center;
+    }
+    .vagas img{
+        width: 400px;
+    }
+    .caixa-reviews{
+        margin: 0px;
+    }
+    .logo{
+        position: sticky;
+        width: 50px;
+    }
+    .navigation{
+        display: flex
+    }
+    .navigation li {
+        display: none;
+    }
+    .navigation-second{
+         /* Posição */
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin-right: 20vw;
+    align-items: center;
+    
+    /* Estilo */
+    color: #667085;
+    right: 100px;
+    }
+    .navigation-second a{
+    color: #667085;
+    text-decoration: none;
+    
+    margin: 0px;
+    }
+}
+@media only screen and (min-width:1000px){
+    .navigation-second{
+        display: none;
+    }
 }
